# brandon

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: error.rs  lib.rs
src/cli/: build.rs  convert.rs  directory.rs  info.rs  mod.rs  read.rs  verify.rs
src/convert/: mod.rs  reindex.rs  split.rs  strip.rs
src/format/: e2store.rs  era.rs  era1.rs  mod.rs  types.rs
src/fs/: mod.rs  naming.rs
src/read/: mod.rs
src/verify/: hash.rs  mod.rs
src/write/: mod.rs
