[package]
name = "brandon"
version = "0.1.0"
rust-version = "1.88"
edition = "2024"
description = "Standalone Rust toolkit for Ethereum ERA/ERA1 files — read, write, verify, convert"
license = "MIT OR Apache-2.0"
keywords = ["ethereum", "era", "e2store", "archive"]

[dependencies]
snap = "1.1.1"
sha2 = "0.11.0"
hex = "0.4.3"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"

[dev-dependencies]
tempfile = "3.27.0"
