[package]
name = "brandon"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Standalone Rust toolkit for Ethereum ERA/ERA1 files — read, write, verify, convert"
license = "MIT OR Apache-2.0"
repository = "https://github.com/galadd/brandon"
documentation = "https://docs.rs/brandon"
readme = "README.md"
keywords = ["ethereum", "era1", "era", "e2store", "archive"]

[dependencies]
snap = "1"
sha2 = "0.11"
hex = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
